QA issues resolved

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <!-- should have a <app-header> -->
 
-<!-- should have a <section> with card grid to display all products -->
+<!-- should have a <section> with card grid with Quantity selector, 'Add To Cart' button to display all products -->
 
 <!-- should have a <app-footer> -->
