--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,45 @@
 <!-- should have a <app-header> -->
-
+    <app-header></app-header>
 <!-- should have a <section> with a carousel and a flexbox grid of aboutUs and sponsors -->
-
+    <section style="margin-top: 3.5rem;">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../../assets/images/veg.jpg" class=" rest d-block w-100 img-fluid" alt="veg">
+            </div>
+            <div class="carousel-item">
+              <img class=" rest d-block w-100 img-fluid" src="../../assets/images/dhals.jpg" alt="grocery">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </section>
+      <section class="d-flex flex-column justify-content-between container-fluid mb-3 mt-3">
+        <article class="card bg-dark text-white">
+          <div class="card-body">
+            <h5>About Us</h5>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit impedit possimus laboriosam error blanditiis libero harum omnis quis ab commodi neque nobis sint doloribus facilis dolore, rerum dolorum illo! Reiciendis?
+          </div>
+        </article>
+        <article class="card bg-primary">
+          <div class="card-body">
+            <div class="row ">
+              <section class="col mh-2"><img class="img-fluid" src="../../../assets/images/Logo1.jpg" alt="logo1"></section>
+              <section class="col mh-2"><img class="img-fluid" src="../../../assets/images/Logo2.png" alt="logo2"></section>
+              <section class="col mh-2"><img class="img-fluid" src="../../../assets/images/Logo3.png" alt="logo3"></section>
+              <section class="col mh-2"><img class="img-fluid" src="../../../assets/images/Logo4.jpeg" alt="logo4"></section>
+            </div>
+          </div>
+        </article>
+      </section>
+      
 <!-- should have a <app-footer> -->
+    <app-footer></app-footer>
+    
